...
                                            </view>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo2" translatesAutoresizingMaskIntoConstraints="NO" id="cK2-jx-flv">
                                                <rect key="frame" x="40" y="0.0" width="30" height="29.999999999999943"/>
                                            </imageView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QSy-qb-iX4">
                                                <rect key="frame" x="80" y="0.0" width="255" height="29.999999999999943"/>
                                                <state key="normal" title="About Us">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <segue destination="wBT-Rr-gto" kind="show" id="53V-BN-yO8"/>
                                                </connections>
                                            </button>
...
                            <constraint firstItem="uVs-d6-cIY" firstAttribute="trailing" secondItem="5KN-ND-vZ9" secondAttribute="trailing" id="z6I-Wl-DvU"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="uVs-d6-cIY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="mGq-yd-Ogi">
                        <barButtonItem key="backBarButtonItem" title=" " id="HTI-u0-hF4"/>
                        <barButtonItem key="leftBarButtonItem" title="Item" image="menuLeft" id="7uB-0y-YV2">
                            <connections>
                                <segue destination="DZT-JE-mHZ" kind="presentation" id="7IW-GV-Xjt"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="menuRigth" id="Vn6-oF-hFx">
                            <connections>
...
                                                        <rect key="frame" x="204.66666666666666" y="0.0" width="50" height="50"/>
                                                        <color key="backgroundColor" red="0.13725490200000001" green="0.62745098040000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="50" id="37m-o1-w12"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="16"/>
                                                        <state key="normal" image="whiteFillPhone">
                                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="25"/>
                                                            </userDefinedRuntimeAttribute>
...
                            <constraint firstItem="DTK-2X-MSV" firstAttribute="trailing" secondItem="kV6-Lj-lpk" secondAttribute="trailing" id="DFE-ok-wQb"/>
                            <constraint firstItem="DTK-2X-MSV" firstAttribute="bottom" secondItem="kV6-Lj-lpk" secondAttribute="bottom" id="ELt-cy-PUa"/>
                            <constraint firstItem="YiO-lJ-Ysj" firstAttribute="width" secondItem="CZZ-Fp-d18" secondAttribute="width" id="GvY-aJ-t85"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="DTK-2X-MSV"/>
                    </view>
                    <navigationItem key="navigationItem" title="DETAIL" id="XX5-nU-FBZ">
                        <barButtonItem key="leftBarButtonItem" image="backIcon" id="Xj7-6d-QbH">
                            <connections>
                                <action selector="BackView:" destination="Uj0-yo-EwR" id="Mep-lX-gCS"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </view>
                                                    <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJu-Oz-rQl">
                                                        <rect key="frame" x="24" y="425" width="25" height="24.5"/>
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                        <state key="normal" image="grayEllipse"/>
                                                        <connections>
                                                            <action selector="optionsAction:" destination="WOc-nj-4EI" eventType="touchUpInside" id="44w-SF-FJL"/>
                                                        </connections>
                                                    </button>
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="emptyProfile" translatesAutoresizingMaskIntoConstraints="NO" id="4Gh-pr-1Mz" customClass="RoundedImageView" customModule="ClinicsAndDoctors" customModuleProvider="target">
                                                        <rect key="frame" x="32" y="20" width="67" height="81.5"/>
...
