...
        let cancelAction = UIAlertAction(title: "Cancel".localized, style: .cancel) { (_) in }

        alertController.addTextField { (textField) in
            textField.placeholder = "Current password".localized
        }
        alertController.addTextField { (textField) in
            textField.placeholder = "New password".localized
        }
        alertController.addTextField { (textField) in
            textField.placeholder = "Re-type the new password".localized
        }


...
